@@ -967,6 +967,7 @@ Collection.prototype.findOne = function findOne () {
  *  - **max** {Number}, for geospatial indexes set the high bound for the co-ordinates.
  *  - **v** {Number}, specify the format version of the indexes.
  *  - **expireAfterSeconds** {Number}, allows you to expire data on indexes applied to a data (MongoDB 2.2 or higher)
+ *  - **name** {String}, override the autogenerated index name (useful if the resulting name is larger than 128 bytes)
  *
  * @param {Object} fieldOrSpec fieldOrSpec that defines the index.
  * @param {Object} [options] additional options during update.
@@ -1007,6 +1008,7 @@ Collection.prototype.createIndex = function createIndex (fieldOrSpec, options, c
  *  - **max** {Number}, for geospatial indexes set the high bound for the co-ordinates.
  *  - **v** {Number}, specify the format version of the indexes.
  *  - **expireAfterSeconds** {Number}, allows you to expire data on indexes applied to a data (MongoDB 2.2 or higher)
+ *  - **name** {String}, override the autogenerated index name (useful if the resulting name is larger than 128 bytes)
  *
  * @param {Object} fieldOrSpec fieldOrSpec that defines the index.
  * @param {Object} [options] additional options during update.
