@@ -156,7 +156,7 @@ DbCommand.createCreateIndexCommand = function(db, collectionName, fieldOrSpec, o
   }
 
   // Generate the index name
-  var indexName = indexes.join("_");
+  var indexName = typeof options.name == 'string' ? options.name : indexes.join("_");
   // Build the selector
   var selector = {'ns':(db.databaseName + "." + collectionName), 'key':fieldHash, 'name':indexName};
 
