@@ -3,6 +3,7 @@
 - Use helpful error msg when native parser not compiled (Issue #685, https://github.com/aheckmann)
 - Arbiter connect hotfix (Issue #681, https://github.com/fengmk2)
 - Upgraded bson parser to 0.1.2 using gyp, deprecated support for node 0.4.X
+- Added name parameter to createIndex/ensureIndex to be able to override index names larger than 128 bytes
 
 1.1.4 2012-08-12
 ----------------
